--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="tictactoe.js" async>
+    <title>Tic Tac Toe!</title>
 </head>
 <body>
+    <div class="header">
+        <h1>Tic Tac Toe!</h1>
+    </div>
+
+    <div class="info">
+        <h2>Round: </h2>
+        <h3>Player 1</h3>
+        <h3>Player 2</h3>
+    </div>
+
+    <div class="gameboard" id="gameboard">
+        
+    </div>
     
 </body>
 </html>
