added player creater

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         <h1>Tic Tac Toe!</h1>
     </div>
 
+    <div id="playerForm">
+        <input type="text" id="player1" name="player1" placeholder="Player 1">
+
+        <input type="text" id="player2" name="player2" placeholder="Player 2">
+
+        <button id="playButton" onclick="setupGame()">Let's Play!</button>
+    </div>
+
     <div class="info">
         <h2>Round: </h2>
         <h3>Player 1</h3>
