--- a/index.html
+++ b/index.html
@@ -7,29 +7,41 @@
     <link rel="stylesheet" href="style.css">
     <script src="tictactoe.js" async></script>
     <title>Tic Tac Toe!</title>
+    <!--Font style-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@400;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
+        <div class="support" id="support1"></div>
         <h1>Tic Tac Toe!</h1>
+        <div class="support" id="support2"></div>
     </div>
 
-    <div id="playerForm">
+    <div class="playerForm" id="playerForm">
+        <h2>Who is playing?</h2>
         <div class="nameInput">
-            <input type="text" id="player1" name="player1" placeholder="Player 1" maxlength="15">
+            <input type="text" id="player1" name="player1" value="Player 1" maxlength="15">
 
-            <input type="text" id="player2" name="player2" placeholder="Player 2" maxlength="15">
+            <input type="text" id="player2" name="player2" value="Player 2" maxlength="15">
         </div>
 
         <button id="playButton" onclick="gameFlow.setupGame()">Let's Play!</button>
     </div>
 
-    <div id="info">
+    <div class="info" id="info">
         <div class="playerCard" id="OneDisplay">
             <h3 id="p1name">Player 1</h3>
             <h4 id="OneWins">0</h4>
         </div>
-
-        <h2 id="round">Round: 1</h2>
+        <div class="infoHolder" id="infoHolder">
+            <h2 id="round">Round: 1</h2>
+            <h3 id="playerTurn">Turn: </h3>
+        </div>
 
         <div class="playerCard" id="TwoDisplay">
             <h3 id="p2name">Player 2</h3>
@@ -37,8 +49,9 @@
         </div>
     </div>
 
-    <div class="gameboard" id="gameboard">
-
+    <div id="border">
+        <div class="gameboard" id="gameboard">
+        </div>
     </div>
     
 </body>
