added next round button

--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
         </div>
     </div>
 
-    <div id="border">
-        <div class="gameboard" id="gameboard">
+    <div id="playArea" class="playArea">
+        <div id="border">
+            <div class="gameboard" id="gameboard">
+            </div>
         </div>
+
+        <button id="nextRoundBtn" onclick="gameFlow.nextRound()">Next Round</button>
     </div>
     
 </body>
