--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@400;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
         <div class="support" id="support1"></div>
-        <h1>Tic Tac Toe!</h1>
+        <h1><i>Tic Tac Toe!</i></h1>
         <div class="support" id="support2"></div>
     </div>
 
